# OpenRewards

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
RewardModeling/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  main.txt  pyproject.toml
RewardModeling/python/: requirements.txt  setup.py
RewardModeling/python/examples/: agent_example.py  config.yaml
RewardModeling/python/reward_modeling/agents/: __init__.py  base.py  dspy_agent.py  langchain_agent.py
RewardModeling/python/reward_modeling/api/: __init__.py  dependencies.py  main.py  models.py
RewardModeling/python/reward_modeling/evaluation/: __init__.py  metrics.py  validation.py
RewardModeling/python/reward_modeling/models/: __init__.py  reward_model.py
RewardModeling/python/reward_modeling/training/: __init__.py  distributed.py  dpo_trainer.py  trainer.py
RewardModeling/python/reward_modeling/utils/: __init__.py  config.py  data_utils.py  logging.py  model_utils.py  monitoring.py
RewardModeling/python/scripts/: train.py
RewardModeling/python/tests/: __init__.py  test_agents.py  test_data.py  test_evaluation.py  test_models.py  test_training.py
RewardModeling/src/data_processing/: parser.rs
RewardModeling/src/python_bindings/: interface.rs
RewardModeling/tauri/src/: main.rs
RewardModeling/tauri/src-tauri/: Cargo.toml
RewardModeling/tauri/src-tauri/src/: main.rs
RewardModeling/tauri/ui/src/: App.js  App.tsx
RewardModeling/tauri/ui/src/views/: Dashboard.js
