[package]
name = "reward-modeling-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance data processing for reward modeling"

[lib]
name = "reward_model_model_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
regex = "1.8"
thiserror = "1.0"
pyo3 = { version = "0.18", features = ["extension-module"] }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.4"
tempfile = "3.5"
pretty_assertions = "1.3"

[[bench]]

name = "data_processing_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1